# frodo-pir

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  renovate.json
.github/workflows/: rust.yml
benches/: bench.rs
data/: generate_db.py
data/local-env/: local-configs.yml
data/local-env/creds/: 0
infra/go/creds-wrangling-utils/: Dockerfile  README.md  go.mod  go.sum  main.go
infra/go/localmanager/: Dockerfile  go.mod  main.go
infra/rust/: Cargo.toml
infra/rust/api/: Cargo.toml  README.md
infra/rust/api/src/: api.rs  errors.rs  keyword.rs  lib.rs  rpc.rs  utils.rs
infra/rust/client/: Cargo.toml  Dockerfile
infra/rust/client/src/: main.rs
infra/rust/server/: Cargo.toml  Dockerfile
infra/rust/server/src/: Cargo.toml  Dockerfile  configs.rs  frodopir.rs  main.rs  s3.rs
pi-rs-cli-utils/: Cargo.toml
pi-rs-cli-utils/src/: lib.rs
src/: api.rs  db.rs  errors.rs  lib.rs  utils.rs
