[package]
name = "frodo-pir"
version = "0.0.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>", "gpestana <g6pestana@gmail.com>", "Sofía Celi <cherenkov@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.3", features = ["small_rng"] }
rand_core = "0.6.3"
base64 = "0.13"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0.59"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.5.1"
pi-rs-cli-utils = {path = "./pi-rs-cli-utils"}

[[bench]]
name = "bench"
harness = false
