[package]
name = "leaked-creds-api"
version = "0.0.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frodo-pir = { path="../../.." }
sha2 = "0.10.2"
bincode = "1.3.3"
base64 = "0.13.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
hex = "0.4.3"
rand = { version="0.8.3", features = ["small_rng"] }
rand_core = "0.6.3"
p256 = { version = "0.11", default-features = false, features = [
  "hash2curve",
  "voprf",
] }

[dependencies.voprf]
git = "https://github.com/novifinancial/voprf/"
tag = "v0.4.0-pre.3"
