[package]
name = "pir-client"
version = "0.0.1"
authors = ["gpestana <g6pestana@gmail.com>"]
edition = "2021"

[dependencies]
leaked-creds-api = {path = "../api"}

serde = {version="1.0", features=["derive"]}
serde_json = "1.0.72"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
base64 = "0.13.0"
sha2 = "0.10.0"
clap = "2.34.0"
serde_yaml = "0.9.10"
