[package]
name = "pir-server"
version = "0.0.1"
authors = ["gpestana <g6pestana@gmail.com>"]
edition = "2018"

[dependencies]
leaked-creds-api = {path = "../api"}
frodo-pir = {path="../../.."}

actix-web = "4"
aws-config = "0.2.0"
aws-sdk-s3 = "0.2.0"
bytes = "1.1.0"
aws-smithy-http = "0.32.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0.72"
futures = "0.3.18"
base64 = "0.13.0"
actix-cors = "0.6.1"
